--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,11 +1,10 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "Jf161205",
     "database": "TwiterDb",
     "host": "localhost",
-    "dialect": "mysql",
-    "port": 3306
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
